conf/envoy.yaml
# Config file for envoy localstack

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8181 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8180 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: { prefix: "/grpcecho.EchoService/", grpc: {} }
                  route:
                    cluster_header: cluster
            http_filters:
            # grpc transcoding
            - name: envoy.filters.http.grpc_json_transcoder
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                proto_descriptor: "/echo/proto.pb"
                services:
                   - "grpcecho.EchoService"
                auto_mapping: false # false: only route grpc methods that have the google.api.http option/annotation
                convert_grpc_status: true
                print_options:
                  add_whitespace: false
                  always_print_primitive_fields: true
                  always_print_enums_as_ints: false
                  preserve_proto_field_names: false

            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:

  - name: echo
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echo
                port_value: 8999

  - name: echojs
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: echojs
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echojs
                port_value: 8998


layered_runtime:
  layers:
  - name: static_layer
    static_layer:
      tracing.lightstep.min_flush_spans: 1
